# hh_api

./: README.md  main.py  pyproject.toml
data/: vacancies.json
src/: main.py  settings.py
src/data/: vacancies.json
src/funcs/: db_manipulations.py  vacancies_queries.py
src/utils/: error.py  get_data.py  hh_api.py  json_crud.py  vacancy.py
tests/: fixtures.py  test_hh_api.py  test_json_crud.py  test_vacancy.py
utils/: vacancies.py
